--- a/ProyectoLenceria/ProyectoLenceria.csproj
+++ b/ProyectoLenceria/ProyectoLenceria.csproj
@@ -69,12 +69,17 @@
   <ItemGroup>
     <Content Include="css\login.css" />
     <Content Include="Login.aspx" />
+    <Content Include="Mantenimientos\Accesorios.aspx" />
+    <Content Include="Mantenimientos\Cabeza.aspx" />
+    <Content Include="Mantenimientos\Calzado.aspx" />
     <Content Include="Mantenimientos\css\principal.css" />
     <Content Include="Mantenimientos\images\img_lights_wide.jpg" />
     <Content Include="Mantenimientos\images\img_mountains_wide.jpg" />
     <Content Include="Mantenimientos\images\img_nature_wide.jpg" />
     <Content Include="Mantenimientos\images\img_snow_wide.jpg" />
     <Content Include="Mantenimientos\Inicio.aspx" />
+    <Content Include="Mantenimientos\ParteInferior.aspx" />
+    <Content Include="Mantenimientos\ParteSuperior.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +89,27 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\Accesorios.aspx.cs">
+      <DependentUpon>Accesorios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Accesorios.aspx.designer.cs">
+      <DependentUpon>Accesorios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\Cabeza.aspx.cs">
+      <DependentUpon>Cabeza.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Cabeza.aspx.designer.cs">
+      <DependentUpon>Cabeza.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\Calzado.aspx.cs">
+      <DependentUpon>Calzado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\Calzado.aspx.designer.cs">
+      <DependentUpon>Calzado.aspx</DependentUpon>
     </Compile>
     <Compile Include="Mantenimientos\Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
@@ -98,6 +124,20 @@
     </Compile>
     <Compile Include="Mantenimientos\MainPage.Master.designer.cs">
       <DependentUpon>MainPage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\ParteInferior.aspx.cs">
+      <DependentUpon>ParteInferior.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\ParteInferior.aspx.designer.cs">
+      <DependentUpon>ParteInferior.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\ParteSuperior.aspx.cs">
+      <DependentUpon>ParteSuperior.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\ParteSuperior.aspx.designer.cs">
+      <DependentUpon>ParteSuperior.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
